deployment_yaml_files/elasticsearch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-nodes
  namespace: logging
  labels:
    app: elasticsearch
spec:
  serviceName: "elasticsearch-discovery"
  replicas: 3 
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: elasticsearch
        image: elasticsearch:8.13.0
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "100m"
            memory: "512Mi"
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
        securityContext:
          capabilities:
            add: ["IPC_LOCK","SYS_RESOURCE"] 
          fsGroup: 1000 
          runAsUser: 1000
          
      volumes:
      - name: data
        emptyDir: {}
