deployment_yaml_files/fluentbit-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
  labels:
    app.kubernetes.io/name: fluent-bit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fluent-bit
    spec:
      containers:
      - name: fluent-bit
        securityContext:
          privileged: true
        image: fluent/fluent-bit:latest
        resources:
          limits:
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: varlog
          mountPath: /var/log
          readOnly: true
        - name: fluentbit-config
          mountPath: /etc/fluent-bit
          readOnly: true # Config dosyalarını salt okunur yapın

      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: fluentbit-config
        configMap:
          name: fluent-bit-config-properties
