deployment_yaml_files/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:8.13.0
        resources:
          limits:
            cpu: "500m"
            memory: "768Mi"
          requests:
            cpu: "100m"
            memory: "512Mi"
        ports:
        - containerPort: 5601
        livenessProbe:
          httpGet:
            path: /app/home
            port: 5601
          initialDelaySeconds: 120
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /app/home
            port: 5601
          initialDelaySeconds: 30
          timeoutSeconds: 5
