deployment_yaml_files/elasticsearch-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client
  namespace: logging
  labels:
    app: elasticsearch
spec:
  ports:
  - port: 9200
    targetPort: 9200
    name: http
  selector:
    app: elasticsearch
  type: ClusterIP
