deployment_yaml_files/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: kibana.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-service 
            port:
              number: 5601
